--- a/index.css
+++ b/index.css
@@ -1,22 +1,16 @@
 body {
-    background-image: url("table");
+    background-image: url("images/table");
     background-position: center;
     background-size: cover;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    color: white;
+    font-weight: bold;
 }
 h1 {
     color:goldenrod;
     text-align: center;
 }
 #message-el {
-    text-align: center;
-    color: white;
-}
-#cards-el {
-    text-align: center;
-    color: white;
-}
-#sum-el {
-    text-align: center;
-    color: white;
+    font-style: italic;
 }
